my-team graph buttons fix on mobile

--- a/src/app/teams/my-team/my-team.component.scss
+++ b/src/app/teams/my-team/my-team.component.scss
@@ -498,20 +498,20 @@ h1 {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  .apply-button{
-    &.rate-btn{
+  .apply-button {
+    &.rate-btn {
       position: relative;
       left: 0;
       transform: none;
       bottom: 0;
       width: unset;
       width: 70px;
-      &.inactive{
-        opacity: .7;
+      &.inactive {
+        opacity: 0.7;
       }
     }
   }
-  .btns-holder{
+  .btns-holder {
     width: calc(100% - 75px);
     display: flex;
     justify-content: space-between;
@@ -532,8 +532,8 @@ h1 {
     background: white !important;
     transform: scale(1);
   }
-  &.disabled{
-    opacity: .5;
+  &.disabled {
+    opacity: 0.5;
   }
   img {
     position: absolute;
@@ -1181,7 +1181,7 @@ h1 {
   .rate-icon {
     width: 35px;
     height: 35px;
-    display:block;
+    display: block;
   }
   .text-info {
     max-width: 555px;
@@ -1263,12 +1263,12 @@ h1 {
       top: 15px;
     }
   }
-  .satisfaction-rate{
-    .btns-holder{
+  .satisfaction-rate {
+    .btns-holder {
       width: calc(100% - 55px);
     }
-    .apply-button{
-      &.rate-btn{
+    .apply-button {
+      &.rate-btn {
         width: 50px;
         font-size: 13px;
         padding: 7px 0;
@@ -1599,15 +1599,8 @@ h1 {
 
   .graph-buttons {
     button {
-      width: 70px;
       font-size: 12px;
       padding: 4px 0;
-    }
-    button:first-of-type {
-      margin-right: -6px;
-    }
-    button:last-of-type {
-      margin-left: -6px;
     }
   }
 }
